--- a/src/components/PresentationSlides/themes/atom-one-dark.css
+++ b/src/components/PresentationSlides/themes/atom-one-dark.css
@@ -71,6 +71,9 @@ hue-6-2: #e6c07b
 .hljs-meta .hljs-string {
   color: #98c379;
 }
+.hljs-number {
+  color: #c4f1ae;
+}
 
 .hljs-attr,
 .hljs-variable,
@@ -78,8 +81,7 @@ hue-6-2: #e6c07b
 .hljs-type,
 .hljs-selector-class,
 .hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-number {
+.hljs-selector-pseudo {
   /* color: #d19a66; */
   color: #9CDCFE;
 }
