added arrayBracketsRule, constAnLet rule, varRule, curlyBraceRuleand parenthesisRule

--- a/src/components/PresentationSlides/themes/atom-one-dark.css
+++ b/src/components/PresentationSlides/themes/atom-one-dark.css
@@ -28,7 +28,10 @@ hue-6-2: #e6c07b
   color: #6A9956;
 }
 
-/* The keywords: const, let, var, function, async */
+/* keywords2: The keywords: const, let, var, function, async */
+/* doctag is jsdoc stuff, like @typedef and more */
+.hljs-array-bracket,
+.hljs-doctag,
 .hljs-keyword2 {
   color: #569CD6;
 }
@@ -43,7 +46,6 @@ hue-6-2: #e6c07b
   color: #569CD6;
 }
 
-.hljs-doctag,
 .hljs-keyword,
 .hljs-formula {
   color: #C586C0;
@@ -59,6 +61,11 @@ hue-6-2: #e6c07b
 .hljs-deletion,
 .hljs-subst {
   color: #e06c75;
+}
+
+.hljs-parenthesis,
+.hljs-curly-brace {
+  color: yellow;
 }
 
 /* variable names instantiated with const or let */
